# microservices-federation

./: .env.dist  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.debug.yaml  docker-compose.override.yaml  docker-compose.yaml  flake.nix
.direnv/: flake-profile-2-link
.github/workflows/: build.yml
docker/postgres/: multiple-databases.sh
gateway/: Dockerfile  entrypoint.sh  package.json  router.yaml  server.js  supergraph.yaml
order/: Dockerfile  requirements.txt
order/migrations/versions/: 5221c4e1f797_.py  e5e56ff3a7bf_.py
order/src/: app.py  command.py  models.py
order/src/schema/: mutations.py  queries.py  schema.graphql
order/tests/: conftest.py
postgres/: Dockerfile
product/: Dockerfile  app.py  entrypoint.sh  models.py  requirements.txt
product/schema/: mutations.py  queries.py  schema.graphql
product/src/: app.py  command.py  models.py
product/tests/: conftest.py  test_product.py
services/: Dockerfile
services/order/: alembic.ini  pyproject.toml
services/product/: alembic.ini  pyproject.toml
services/product/migrations/versions/: 865c23002cf6_.py
services/product/src/: app.py  fixtures.py  settings.py
services/product/tests/: conftest.py  test_product.py
services/user/: alembic.ini  pyproject.toml
user/: Dockerfile  app.py  config.py  entrypoint.sh  models.py  requirements.txt
user/schema/: mutations.py  queries.py  schema.graphql
user/src/: app.py  command.py  config.py  models.py
user/tests/: conftest.py  test_create_user.py  test_index.py  test_login.py  test_user.py
(+35 files in other folders)
